# ThinUI

./: .env  .gitignore  Dev-Launch.command  README.md  SETUP_GUIDE.md  launch.sh  package-lock.json  package.json  run-thinui.sh  test-c64.html  vite.config.js
.github/workflows/: release-giftwrapper.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/surfaces/dashboard/: DashboardSurface.tsx  README.md
src/surfaces/kanban/: KanbanSurface.tsx  README.md
ui/: controls.js  index.html  main.js  styles.css
ui/themes/: c64.css
