[package]
name = "giftwrapper"
version = "1.0.0"
description = "GiftWrapper – ThinUI Desktop Renderer for uCode1 & uCode2"
authors = ["OkAgentDigital"]
license = "MIT"
repository = "https://github.com/OkAgentDigital/ThinUI"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
shellexpand = "3.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
